# npr-cli

./: .coverage  .gitignore  CONTRIBUTING.md  justfile  pyproject.toml  pyprojext.toml  requirements.dev.in  requirements.in  requirements.test.in
.circleci/: config.yml
src/npr/: __init__.py  api.py  app_controller.py  app_state.py  cli.py  npr.py
src/npr/app/: state.py
src/npr/cli/: __init__.py  controller.py
src/npr/cli/handlers/: __init__.py  dispatcher.py  search.py
src/npr/domain/: __init__.py  exceptions.py  station.py
src/npr/services/: __init__.py  backend.py  npr.py
src/npr/tui/: __init__.py  tui.py
src/npr/tui/components/: buttons.py  favorites.py  now_playing.py  search.py
test/npr/api/: test_migrations.py  test_server.py  test_state.py
test/npr/cli/: test_cli_init.py  test_controller.py
test/npr/cli/handlers/: test_dispatcher.py  test_handlers_init.py  test_search.py
test/npr/domain/: test_player.py
test/npr/services/: test_backend.py  test_npr.py
