[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npr-cli"
dynamic = ["version"]
authors = [
    { name="evanmags", email="magnussen.evan@gmail.com" }
]
description = "A simple npr streaming cli"
readme = "README.md"
dependencies = [
    "click",
    "inquirerpy",
    "python-vlc",
    "requests",
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[project.urls]
homepage = "https://github.com/evanmags/npr-cli"
repository = "https://github.com/evanmags/npr-cli"

[project.scripts]
npr = "npr.cli:npr"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "npr.__version__"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=npr --cov-report term-missing --cov-config=pyproject.toml"

[tool.coverage.report]
exclude_lines = [
    "^\\s*\\.\\.\\.$"
]