[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npr-cli"
dynamic = ["version"]
authors = [
    { name="evanmags", email="magnussen.evan@gmail.com" }
]
description = "A simple npr streaming cli"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "click",
    "flask",
    "gunicorn",
    "inquirerpy",
    "packaging",
    "python-vlc",
    "requests",
    "textual",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]
dev = [
    "npr-cli[test]",
    "black",
    "isort",
    "flake8",
]

[project.urls]
homepage = "https://github.com/evanmags/npr-cli"
repository = "https://github.com/evanmags/npr-cli"

[project.scripts]
npr = "npr.cli:npr"

[tool.hatch.build.targets.wheel]
packages = ["src/npr"]

[tool.hatch.version]
path = "src/npr/__init__.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=npr --cov-report term-missing --cov-config=pyproject.toml"

[tool.coverage.report]
exclude_lines = [
    "^\\s*\\.\\.\\.$"
]